@@ -21,7 +21,7 @@ The storage is instantiate by passing a redis-rb instance to the storage.
 
 Passing an em-redis instance might work, but I haven't tried.
 
-Tested with Redis 1.2.6 and 2.0.4 (redis-rb 2.1.1, and 2.2.0).
+Tested with Redis 2.0.4 and 2.2.12 (redis-rb 2.1.1, and 2.2.2).
 
 
 == running tests
@@ -31,7 +31,7 @@ assuming you have
   ruote/
   ruote-redis/
 
-start a redis server instance (port 6379) and then 
+start a redis server instance (port 6379) and then
 
 
 * unit tests :
