@@ -25,7 +25,7 @@ Redis storage for ruote (a Ruby workflow engine)
     '*.gemspec', '*.txt', '*.rdoc', '*.md'
   ]
 
-  s.add_runtime_dependency 'redis', '2.1.1'
+  s.add_runtime_dependency 'redis', '2.2.2'
   s.add_runtime_dependency 'ruote', ">= #{s.version}"
 
   s.add_development_dependency 'rake'
